# FastAPI-tutorial

./: README.md  pyproject.toml
fastapi_tutorial/: __init__.py  main.py
