[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = "First FastAPI app"
authors = ["risoko <przemyslaw.rozycki1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
